<resources>
    <string name="app_name">Agenda Personale</string>
    <string name="contatti">Contatti</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="cognome">Cognome:</string>
    <string name="salva">Salva</string>
    <string name="todo">TODO</string>
    <string name="aggiungi_contatto" />
    <string name="nome_contatto">Nome</string>
    <string name="telefono">Telefono:</string>
    <string name="e_mail">E-Mail:</string>
    <string name="rubrica">Rubrica</string>
    <string name="credit1">Created By</string>
    <string name="credit2">Alessandro Polastri</string>
    <string name="mario">Mario</string>
    <string name="rossi">Rossi</string>
    <string name="_1122334455">1122334455</string>
    <string name="mario_example_com">mario@example.com</string>
    <string name="attivit_in_corso">Attività In Corso</string>
    <string name="le_tue_attivit">Le Tue Attività</string>
    <string name="suggerisci_attivit">Suggerisci Attività</string>
    <string name="aggiungi_attivita">Aggiungi Attivita</string>
    <string name="aggiungi_contatto_main">Aggiungi Contatto</string>
    <string name="comprare_il_latte">Comprare il latte</string>
    <string name="gg_mm_aaaa">gg/mm/aaaa</string>
    <string name="salva_attivita">Salva</string>
    <string name="scade_il">Scade il:</string>
    <string name="impegni">Impegni</string>
    <string name="aggiungi_impegno">Aggiungi Impegno</string>
    <string name="cena_con_mario">Cena con Mario</string>
    <string name="hh_mm">hh:mm</string>
    <string name="ripetizione">Ripetizione:</string>
    <string name="aggiungi_qui_una_nota">Aggiungi qui una nota</string>
    <string name="tipo">Tipo:</string>
    <string name="tipo_personalizzato">Tipo Personalizzato</string>
    <string name="aggiungi_tipo">Aggiungi Tipo:</string>
    <string name="cancella_impegno">TODO</string>
    <string name="dalle">Dalle:</string>
    <string name="alle">Alle:</string>
    <string name="mostra_note">TODO</string>
    <string name="allarme_impostato">Allarme impostato:</string>
    <string name="allarme">Allarme:</string>
    <string name="di_tipo">Di Tipo:</string>
    <string name="ripetere">Ripetere:</string>
    <string name="impegno_asterisco">*Impegno:</string>
    <string name="data_asterisco">*Data:</string>
    <string name="ora_inizio_asterisco">*Ora inizio:</string>
    <string name="ora_fine_asterisco">*Ora fine:</string>
    <string name="attivit_asterisco">*Attività:</string>
    <string name="scadenza_asterisco">*Scadenza:</string>
    <string name="nome_asterisco">*Nome:</string>
    <string name="note">Note:</string>
    <string name="dettagli">Dettagli</string>
</resources>
