<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/oggetto_attivita_in_corso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attivit_asterisco"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="403dp" />

            <EditText
                android:id="@+id/eoggetto_attivita_in_corso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comprare_il_latte"
                android:inputType="textCapSentences"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/scadenza_attivita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scadenza_asterisco"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/escadenza_attivita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/gg_mm_aaaa"
                android:inputType="date"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/salva_attivita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/salva_attivita"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>
