<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/woggetto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp" />

    <ImageButton
        android:id="@+id/cancella_impegno"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cancella_impegno"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:targetApi="lollipop"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/wdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woggetto"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/worainizio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/wdalle"
        app:layout_constraintTop_toBottomOf="@+id/wdata"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/worafine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/walle"
        app:layout_constraintTop_toBottomOf="@+id/wdata"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/wdalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/dalle"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wdata"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/walle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/alle"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/worainizio"
        app:layout_constraintTop_toBottomOf="@+id/wdata"
        android:layout_marginLeft="5dp" />

    <ImageButton
        android:id="@+id/mostra_note"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/mostra_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancella_impegno"
        app:srcCompat="?android:attr/actionModePasteDrawable"
        tools:targetApi="lollipop"
        android:layout_marginRight="10dp" />
</android.support.constraint.ConstraintLayout>
